ajuste Final_5